--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
         "tar": "6.2.1",
         "postcss": "8.4.38",
         "socket.io": "4.6.2",
-        "ws": "8.17.1"
+        "ws": "8.17.1",
+        "express": "4.20.0"
     }
 }
